# organizr

./: .clang-format  .clang-tidy  .gitignore  AUTHORS.TXT  CMakeLists.txt  Dockerfile  README.TXT  docker-compose.yml
migrations/: V1__init.sql
src/: bot.cpp  db.cpp  db.h  global.h  strings.h
src/bot/: HandlerManager.cpp  HandlerManager.h  handlers.cpp  handlers.h
src/database/: DatabaseWrapper.cpp  DatabaseWrapper.h  db.cpp  db.h
src/logging/: log.cpp  log.h  logging.cpp  logging.h
src/types/: list.cpp  list.h
